# formalized-voting

./: LICENSE  README.md  Schulze.v  Schulze_Algorithm.v  Schulze_Count.v  Schulze_Dirk.v  Schulze_Dirk_Z.v  fp.v  fp_finite_Dirk.v  reif.v  schulze-count.v  vote.hs
SchulzeCounting/: Derivation.hs  DerivationNative.hs  Extraction.v  ExtractionNative.v  ListLemma.v  Main.hs  MainNative.hs  Makefile  README  SchulzeSynthesis.v
SchulzeCounting/ocamlcode/: example-votes.txt  lexer.mll  lib.ml  lib.mli  main.ml  parser.mly  votes_1000.txt
SchulzeCounting/ocamlsecond/: lib.ml  lib.mli  main.ml  parser.mly
SchulzeOCaml/: Extraction.v  ListLemma.v  Makefile  SchulzeSynthesis.v  derivation.ml  example_votes.txt  rand.pl
changed-code/: Extraction.v  schulzecomputation.v  schulzesynthesis.v  vote_change.hs  votes_1.txt
changed-code/schulze-native-voting/: schulze-native-voting.cabal
changed-code/schulze-new-voting/: schulze-new-voting.cabal
changed-code/schulze-voting/: schulze-voting.cabal
paper-code/: Extraction.v  ListLemma.v  SchulzeSynthesis.v
paper-code-with-ballot/: Derivation.hs  Main.hs  Makefile  Readme.md  Readme.txt  SchulzeSynthesis.v
paper-code/schulze-voting/: schulze-voting.cabal
paper-code/schulze-voting/app/: Main.hs  result.txt  result_customized.txt  rivest_shen_result.txt  schulze-voting-exe.prof  votes_customized.txt  votes_rivest_shen.txt  votes_small.txt
paper-code/schulze-voting/src/: Derivation.hs  Lib.hs
schulze-modified/: ListLemma.v  Makefile  SchulzeSynthesis.v  derivation.ml  lexer.mll  lib.ml  main.ml  rand.pl
(+32 files in other folders)
